# duolibre

./: .gitignore  README.md  duolibre.py  flake.nix  pyproject.toml  requirements.txt  setup.py
duolibre/: duolibre.py
